--- a/3d-generator.html
+++ b/3d-generator.html
@@ -202,7 +202,7 @@
                         <p class="text-gray-700">The software takes your text input, maps the 2D rotational ambigram, and then uses a <strong>cross-sectioning technique</strong> to generate the solid body. This process creates a clean, watertight <strong>STL file</strong> that is perfectly optimized for all common FDM and SLA 3D printers. The resultant model is a true "physical ambigram," highly sought after in the niche 3D design community.</p>
                     </div>
                     <div>
-                        <img src="./image/A person holds a 3D-printed pun object, demonstrating the result from digital model to physical item.png" alt="Cross-section diagram illustrating how the 3D ambigram shape is formed" class="w-full h-auto rounded-lg shadow-xl mb-4 border border-gray-300">
+                        <img src="./image/A person holds a 3D-printed pun object, demonstrating the result from digital model to physical item.webp" alt="Cross-section diagram illustrating how the 3D ambigram shape is formed" class="w-full h-auto rounded-lg shadow-xl mb-4 border border-gray-300">
                     </div>
                 </div>
                 <div class="mt-12">
