--- a/generator.html
+++ b/generator.html
@@ -207,7 +207,7 @@
               class="bg-white p-6 rounded-xl shadow-lg border border-gray-100 text-center"
             >
               <img
-                src="./image/Two-name ambigram showing Sarah upright and John when rotated 180 degrees.png"
+                src="./image/Two-name ambigram showing Sarah upright and John when rotated 180 degrees.webp"
                 alt="Two-Name Ambigram: Sarah/John"
                 class="w-full h-auto rounded-lg mb-4 border"
               />
@@ -218,7 +218,7 @@
               class="bg-white p-6 rounded-xl shadow-lg border border-gray-100 text-center"
             >
               <img
-                src="./image/Tattoo-style TRUST ambigram with thick, smooth strokes suitable for permanent ink.png"
+                src="./image/Tattoo-style TRUST ambigram with thick, smooth strokes suitable for permanent ink.webp"
                 alt="Tattoo Ambigram: TRUST"
                 class="w-full h-auto rounded-lg mb-4 border"
               />
@@ -229,7 +229,7 @@
               class="bg-white p-6 rounded-xl shadow-lg border border-gray-100 text-center"
             >
               <img
-                src="./image/Animated GIF of ILLUSION rotating 180 degrees while maintaining readability.png"
+                src="./image/Animated GIF of ILLUSION rotating 180 degrees while maintaining readability.webp"
                 alt="Opposing Concepts Ambigram"
                 class="w-full h-auto rounded-lg mb-4 border"
               />
@@ -281,7 +281,7 @@
             </div>
             <div>
               <img
-                src="./image/Diagram illustrating letter-mapping in a two-name rotation.png"
+                src="./image/Diagram illustrating letter-mapping in a two-name rotation.webp"
                 alt="Diagram illustrating the letter-mapping process in a two-name ambigram, showing how A maps to Z"
                 class="w-full h-auto rounded-lg shadow-xl mb-4 border border-gray-300"
               />
