--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 class="bg-white p-3 sm:p-4 rounded-2xl shadow-2xl border border-gray-200/50"
               >
                 <img
-                  src="./image/3D ambigram design example of a white marble sculpture that read.png"
+                  src="./image/3D ambigram design example of a white marble sculpture that read.webp"
                   alt="3D ambigram design example of a white marble sculpture that reads 'ART' from the front and transforms into 'SCIENCE' when rotated 180 degrees."
                   class="rounded-xl w-full h-auto"
                 />
@@ -647,7 +647,7 @@
                 class="snap-center flex-shrink-0 w-80 bg-white rounded-xl shadow-xl p-4 text-center border"
               >
                 <img
-                  src="./image/Two-name ambigram showing Sarah upright and John when rotated 180 degrees.png"
+                  src="./image/Two-name ambigram showing Sarah upright and John when rotated 180 degrees.webp"
                   alt="Two-Name Ambigram: Sarah/John"
                   class="w-full h-auto rounded-lg mb-3 border"
                 />
@@ -657,7 +657,7 @@
                 class="snap-center flex-shrink-0 w-80 bg-white rounded-xl shadow-xl p-4 text-center border"
               >
                 <img
-                  src="./image/Tattoo-style TRUST ambigram with thick, smooth strokes suitable for permanent ink.png"
+                  src="./image/Tattoo-style TRUST ambigram with thick, smooth strokes suitable for permanent ink.webp"
                   alt="Tattoo Ambigram: TRUST"
                   class="w-full h-auto rounded-lg mb-3 border"
                 />
@@ -667,7 +667,7 @@
                 class="snap-center flex-shrink-0 w-80 bg-white rounded-xl shadow-xl p-4 text-center border-2 border-secondary"
               >
                 <img
-                  src="./image/3D printed ambigram object on turntable showing rotational word transformation.png"
+                  src="./image/3D printed ambigram object on turntable showing rotational word transformation.webp"
                   alt="3D Printed Ambigram"
                   class="w-full h-auto rounded-lg mb-3 border"
                 />
@@ -679,7 +679,7 @@
                 class="snap-center flex-shrink-0 w-80 bg-white rounded-xl shadow-xl p-4 text-center border"
               >
                 <img
-                  src="./image/Animated GIF of ILLUSION rotating 180 degrees while maintaining readability.png"
+                  src="./image/Animated GIF of ILLUSION rotating 180 degrees while maintaining readability.webp"
                   alt="Animated GIF: ILLUSION"
                   class="w-full h-auto rounded-lg mb-3 border"
                 />
