--- a/tattoo-design.html
+++ b/tattoo-design.html
@@ -105,7 +105,7 @@
                             <p class="text-gray-700">For long words or <strong>two-name ambigrams</strong>, a stylized block font is often safer and easier for the tattoo artist to execute with precision.</p>
                         </div>
                     </div>
-                    <img src="./image/Side-by-side%20comparison%20of%20thick-stroke%20%28recommended%29%20vs%20thin-stroke%20%28not%20recommended%29%20ambigram%20tattoos%20for%20forever.png" alt="Side-by-side comparison of thick-stroke (recommended) vs thin-stroke (not recommended) ambigram tattoos for "Forever", showing clarity and ink bleeding effects" class="w-full h-auto rounded-xl shadow-md">
+                    <img src="./image/Side-by-side comparison of thick-stroke (recommended) vs thin-stroke (not recommended) ambigram tattoos for forever.webp", showing clarity and ink bleeding effects" class="w-full h-auto rounded-xl shadow-md">
 
                     <h2 class="text-3xl font-display font-bold text-dark mt-16 mb-6 border-b pb-3">2. Preparation & Placement</h2>
                     <p class="leading-relaxed mb-6">A <strong>Two-Name Ambigram</strong> tattoo is deeply personal. The process requires extra care to ensure both words read clearly and the design ages gracefully. Follow this checklist for best results.</p>
@@ -124,19 +124,19 @@
                             <i class="fa fa-heart text-3xl text-red-500 mb-3"></i>
                             <h3 class="font-display font-semibold text-xl mb-2">Couples & Love</h3>
                             <ul class="text-gray-600"><li>Love / Hate</li><li>Faith / Trust</li><li>Mom / Dad</li></ul>
-                            <img src="./image/Close-up of two-name ambigram tattoo.png" alt="Couples & Love Ambigram Tattoo Design" class="w-full h-auto rounded-xl shadow-md">
+                            <img src="./image/Close-up of two-name ambigram tattoo.webp" alt="Couples & Love Ambigram Tattoo Design" class="w-full h-auto rounded-xl shadow-md">
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md text-center border">
                             <i class="fa fa-star text-3xl text-yellow-500 mb-3"></i>
                             <h3 class="font-display font-semibold text-xl mb-2">Personal Values</h3>
                             <ul class="text-gray-600"><li>Life / Death</li><li>Destiny / Choice</li><li>Sinner / Saint</li></ul>
-                            <img src="./image/4-step infographic for ambigram tattoo preparation.png" alt="4-step infographic for ambigram tattoo preparation: generate file, print & tape, consult artist, apply stencil">
+                            <img src="./image/4-step infographic for ambigram tattoo preparation.webp" alt="4-step infographic for ambigram tattoo preparation: generate file, print & tape, consult artist, apply stencil">
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md text-center border">
                             <i class="fa fa-bolt text-3xl text-blue-500 mb-3"></i>
                             <h3 class="font-display font-semibold text-xl mb-2">Inspirational</h3>
                             <ul class="text-gray-600"><li>Believe / Achieve</li><li>Warrior / Healer</li><li>Dream / Reality</li></ul>
-                            <img src="./image/3-panel collage of ambigram tattoos.png" alt="3-panel collage of ambigram tattoos: "Love/Hate" (couples), "Life/Death" (values), "Believe/Achieve" (inspirational)">
+                            <img src="./image/3-panel collage of ambigram tattoos.webp" alt="3-panel collage of ambigram tattoos: "Love/Hate" (couples), "Life/Death" (values), "Believe/Achieve" (inspirational)">
                         </div>
                     </div>
                 </div>
