--- a/what-is-ambigram.html
+++ b/what-is-ambigram.html
@@ -227,7 +227,7 @@
 
             <figure class="my-8 text-center">
               <img
-                src="./image/180° rotational ambigram example for the word Symmetry, readable both upright and when rotated.png"
+                src="./image/180° rotational ambigram example for the word Symmetry, readable both upright and when rotated.webp"
                 alt="180° rotational ambigram example for the word Symmetry, readable both upright and when rotated"
                 class="w-full max-w-md mx-auto h-auto rounded-lg shadow-xl border border-gray-300"
                 loading="lazy"
@@ -279,7 +279,7 @@
                   maintaining continuity from different viewing angles.
                 </p>
                 <img
-                  src="./image/Reflective ambigram Echo showing identical readability in normal view and mirror reflection.png"
+                  src="./image/Reflective ambigram Echo showing identical readability in normal view and mirror reflection.webp"
                   alt="Reflective Ambigram example for the word Symmetry, readable both upright and when flipped"
                   class="w-full max-w-md mx-auto h-auto rounded-lg shadow-xl border border-gray-300 mt-4"
                   loading="lazy"
@@ -308,7 +308,7 @@
                     >Explore 3D Ambigram Technology.</a
                   >
                   <img
-                    src="./image/3D ambigram physical object showing Light from the front and Shadow from the 180° view.png"
+                    src="./image/3D ambigram physical object showing Light from the front and Shadow from the 180° view.webp"
                     alt="Reflective Ambigram example for the word Symmetry, readable both upright and when flipped"
                     class="w-full max-w-md mx-auto h-auto rounded-lg shadow-xl border border-gray-300 mt-4"
                     loading="lazy"
