--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
       name="description"
       content="Frequently asked questions about our ambigram generator service, usage, and features."
     />
-    <script src="./js/tailwindcss.js"></script>
+    <script type="module" src="./js/tailwindcss.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
