--- a/free-generator.html
+++ b/free-generator.html
@@ -27,7 +27,7 @@
       content="ambigram generator free, 3D printing, free ambigram maker, online ambigram creator, create ambigrams for free, STL generator"
     />
     <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
-    <script src="./js/tailwindcss.js"></script>
+    <script type="module" src="./js/tailwindcss.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -41,10 +41,10 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/jqery.min.js"></script>
+    <script type="module" src="./js/jqery.min.js"></script>
     <script type="module" src="./libs/FileSaver.js"></script>
     <script type="module" src="main.js"></script>
-    <script src="./libs/gif.js"></script>
+    <script type="module" src="./libs/gif.js"></script>
     <link rel="preload" href="./letterData.js" as="script" />
     <link
       rel="preload"
