--- a/tattoo-design.html
+++ b/tattoo-design.html
@@ -105,7 +105,7 @@
                             <p class="text-gray-700">For long words or <strong>two-name ambigrams</strong>, a stylized block font is often safer and easier for the tattoo artist to execute with precision.</p>
                         </div>
                     </div>
-                    <img src="./image/Side-by-side comparison of thick-stroke (recommended) vs thin-stroke (not recommended) ambigram tattoos for forever.webp", showing clarity and ink bleeding effects" class="w-full h-auto rounded-xl shadow-md">
+                    <img src="./image/Side-by-side comparison of thick-stroke.webp", showing clarity and ink bleeding effects" class="w-full h-auto rounded-xl shadow-md">
 
                     <h2 class="text-3xl font-display font-bold text-dark mt-16 mb-6 border-b pb-3">2. Preparation & Placement</h2>
                     <p class="leading-relaxed mb-6">A <strong>Two-Name Ambigram</strong> tattoo is deeply personal. The process requires extra care to ensure both words read clearly and the design ages gracefully. Follow this checklist for best results.</p>
