--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
   <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   <link rel="canonical" href="https://www.ambigramgenerator.me/" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- ===== LOADING PERFORMANCE OPTIMIZATIONS START ===== -->
 
@@ -628,18 +629,44 @@
 
 <body class="bg-light text-dark font-sans">
   <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="/" class="text-xl font-bold text-dark hover:text-primary transition-colors">AmbigramGenerator.me</a>
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center flex-wrap">
+      <a href="/" class="flex items-center text-xl font-bold text-dark hover:text-primary transition-colors">
+        <img src="/logo.png" alt="">
+      </a>
       <nav id="main-nav" class="hidden md:flex items-center space-x-6">
         <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
         <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
         <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an
           Ambigram</a>
+
+        <!-- Tutorial Dropdown - Adjusted href to prevent '#' error -->
+        <div class="relative group">
+          <a href="javascript:void(0);"
+            class="text-dark hover:text-primary font-medium transition-colors inline-flex items-center group-hover:text-primary">
+            Tutorial
+            <svg class="ml-1 w-4 h-4 transition-transform duration-200 group-hover:rotate-180" fill="none"
+              stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+            </svg>
+          </a>
+          <div class="absolute left-1/2 -translate-x-1/2 hidden group-hover:block bg-white shadow-lg rounded-md space-y-2 w-48 py-2 z-20 border border-gray-100 
+    -mt-1"> <!-- 调整margin-top为负值，使其与父菜单重叠 -->
+            <a href="/tutorial/multi-word-guide.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Multi-Word
+              Guide</a>
+            <a href="/tutorial/tattoo-design.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Tattoo Design
+              Guide</a>
+            <a href="/tutorial/two-name-ambigram.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
+              Ambigram</a>
+          </div>
+        </div>
+
         <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
+        <!-- Check this href as well, if it's meant to be a scroll-to link -->
         <a href="#generator"
           class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
         <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
         <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
+        <a href="/about.html" class="text-dark hover:text-primary font-medium transition-colors">About Us</a>
       </nav>
       <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
         <i class="fa fa-bars"></i>
@@ -650,6 +677,27 @@
       <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
       <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
       <a href="/what-is-ambigram.html" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+
+      <!-- Mobile Tutorial Accordion/Dropdown -->
+      <div class="border-b border-gray-200">
+        <button class="flex justify-between items-center w-full py-2 px-4 text-dark hover:bg-gray-100"
+          onclick="toggleMobileTutorial()">
+          Tutorial
+          <svg class="ml-2 w-4 h-4 transform transition-transform duration-300" id="mobile-tutorial-arrow" fill="none"
+            stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+          </svg>
+        </button>
+        <div id="mobile-tutorial-links">
+          <a href="/tutorial/multi-word-guide.html" class="block px-8 py-2 text-dark hover:bg-gray-100">Multi-Word
+            Guide</a>
+          <a href="/tutorial/tattoo-design.html" class="block px-8 py-2 text-dark hover:bg-gray-100">Tattoo Design
+            Guide</a>
+          <a href="/tutorial/two-name-ambigram.html" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
+            Ambigram</a>
+        </div>
+      </div>
+
       <a href="/tattoo-design.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
       <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
       <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
@@ -660,6 +708,22 @@
       </div>
     </div>
   </header>
+
+  <script>
+    // JavaScript for toggling mobile menu visibility (if not already present)
+    document.getElementById('mobile-menu-btn').addEventListener('click', function () {
+      const mobileMenu = document.getElementById('mobile-menu');
+      mobileMenu.classList.toggle('hidden');
+    });
+
+    // JavaScript for toggling the mobile tutorial dropdown
+    function toggleMobileTutorial() {
+      const tutorialLinks = document.getElementById('mobile-tutorial-links');
+      const arrow = document.getElementById('mobile-tutorial-arrow');
+      tutorialLinks.classList.toggle('hidden');
+      arrow.classList.toggle('rotate-180'); // Rotate arrow when open
+    }
+  </script>
 
   <main>
     <section class="bg-gradient-to-br from-blue-50 to-green-50 py-20 md:py-24">
@@ -908,7 +972,7 @@
               (Click an ambigram to rotate it)
             </p>
             <p id="loading_text" class="text-center text-gray-600 font-medium"></p>
-            <div id="ambigrams" class="mt-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div id="ambigrams" class="mt-4 grid grid-cols-2 lg:grid-cols-3 gap-4">
               <!-- Generated ambigrams will appear here -->
             </div>
           </div>
@@ -1115,35 +1179,77 @@
     </section>
   </main>
 
-  <footer class="bg-dark text-white py-12">
+  <footer class="bg-gray-900 text-white pt-16 pb-8">
     <div class="container mx-auto px-4">
-      <div class="flex flex-col md:flex-row justify-between items-center border-b border-gray-700 pb-8">
-        <div>
-          <h3 class="text-2xl font-bold font-display mb-2">
-            AmbigramGenerator.me
-          </h3>
-          <p class="text-gray-400">The next-generation ambigram creator.</p>
-        </div>
-        <div class="flex space-x-4 mt-4 md:mt-0">
-          <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook"><i
-              class="fa fa-facebook"></i></a>
-          <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Instagram"><i
-              class="fa fa-instagram"></i></a>
-          <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Twitter"><i
-              class="fa fa-twitter"></i></a>
-        </div>
-      </div>
-      <div class="mt-8 text-center text-gray-400 text-sm">
-        <p>
-          &copy; 2024 AmbigramGenerator.me |
-          <a href="/privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
-          |
-          <a href="/terms.html" class="hover:text-white transition-colors">Terms of Service</a>
+      <div class="mx-auto pb-4">
+        <h3 class="text-2xl font-bold font-display text-white mb-2">
+          AmbigramGenerator.me
+        </h3>
+        <p class="text-gray-400 text-sm">
+          The essential toolkit for ambigram creation, built for speed and reliability.
         </p>
       </div>
-    </div>
-  </footer>
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8 pb-10 border-b border-gray-700">
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Product </h4>
+          <ul class="space-y-3">
+            <li><a href="/" class="text-gray-400 hover:text-white transition-colors text-sm">Home</a></li>
+            <li><a href="/generator" class="text-gray-400 hover:text-white transition-colors text-sm">2D Generator</a>
+            </li>
+            <li><a href="/3d-generator" class="text-gray-400 hover:text-white transition-colors text-sm">3D
+                Generator</a></li>
+            <li><a href="/pricing" class="text-gray-400 hover:text-white transition-colors text-sm">Pricing</a></li>
 
+          </ul>
+        </div>
+
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Guides </h4>
+          <ul class="space-y-3">
+            <li><a href="/what-is-ambigram.html" class="text-gray-400 hover:text-white transition-colors text-sm">What
+                is an Ambigram</a></li>
+
+            <li><a href="/tattoo-design.html" class="text-gray-400 hover:text-white transition-colors text-sm"> Design
+                Guide</a></li>
+
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Tutorial </h4>
+          <ul class="space-y-3">
+            <li><a href="/tutorial/multi-word-guide.html"
+                class="text-gray-400 hover:text-white transition-colors text-sm">Multi-Word Ambigram</a></li>
+            <li><a href="/tutorial/tattoo-design.html"
+                class="text-gray-400 hover:text-white transition-colors text-sm">Tattoo Design Guide</a></li>
+            <li><a href="/tutorial/two-name-ambigram.html"
+                class="text-gray-400 hover:text-white transition-colors text-sm">Two-Name Ambigram</a></li>
+
+          </ul>
+        </div>
+
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Support</h4>
+          <ul class="space-y-3">
+            <li><a href="/#faq" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a></li>
+            <li><a href="/privacy" class="text-gray-400 hover:text-white transition-colors text-sm">Privacy Policy</a>
+            </li>
+            <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of Service</a>
+            </li>
+            <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="mt-8 text-center text-gray-400 text-xs">
+        <p>
+          &copy; <span id="current-year">2024</span> AmbigramGenerator.me Technologies. All Rights Reserved. Not
+          affiliated with any other generator site.
+        </p>
+        <script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
+      </div>
+    </div>
+
+  </footer>
   <!-- Deferred scripts for 3D Generator functionality -->
 
 
@@ -1154,18 +1260,6 @@
   <script>
     // Use requestIdleCallback for non-critical initialization
     function initializePage() {
-      // Mobile Menu Toggle - Optimized to prevent reflows
-      const mobileMenuBtn = document.getElementById("mobile-menu-btn");
-      const mobileMenu = document.getElementById("mobile-menu");
-      if (mobileMenuBtn && mobileMenu) {
-        mobileMenuBtn.addEventListener("click", () => {
-          // Use requestAnimationFrame to prevent forced reflows
-          requestAnimationFrame(() => {
-            mobileMenu.classList.toggle("hidden");
-          });
-        }, { passive: true });
-      }
-
       // FAQ Accordion - Use passive listeners and batch DOM updates
       const faqButtons = document.querySelectorAll(".faq-toggle");
       if (faqButtons.length > 0) {
