--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
       <nav id="main-nav" class="hidden md:flex items-center space-x-6">
         <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
         <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
-        <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an
+        <a href="/what-is-ambigram" class="text-dark hover:text-primary font-medium transition-colors">What is an
           Ambigram</a>
 
         <!-- Tutorial Dropdown - Adjusted href to prevent '#' error -->
@@ -651,22 +651,22 @@
           </a>
           <div class="absolute left-1/2 -translate-x-1/2 hidden group-hover:block bg-white shadow-lg rounded-md space-y-2 w-48 py-2 z-20 border border-gray-100 
     -mt-1"> <!-- 调整margin-top为负值，使其与父菜单重叠 -->
-            <a href="/tutorial/multi-word-guide.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Multi-Word
+            <a href="/tutorial/multi-word-guide" class="block px-4 py-2 text-dark hover:bg-gray-100">Multi-Word
               Guide</a>
-            <a href="/tutorial/tattoo-design.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Tattoo Design
+            <a href="/tutorial/tattoo-design" class="block px-4 py-2 text-dark hover:bg-gray-100">Tattoo Design
               Guide</a>
-            <a href="/tutorial/two-name-ambigram.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
+            <a href="/tutorial/two-name-ambigram" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
               Ambigram</a>
           </div>
         </div>
 
-        <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
+        <a href="/tattoo-design" class="font-medium transition-colors">Design Guides</a>
         <!-- Check this href as well, if it's meant to be a scroll-to link -->
         <a href="#generator"
           class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
         <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
         <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
-        <a href="/about.html" class="text-dark hover:text-primary font-medium transition-colors">About Us</a>
+        <a href="/about" class="text-dark hover:text-primary font-medium transition-colors">About Us</a>
       </nav>
       <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
         <i class="fa fa-bars"></i>
@@ -676,7 +676,7 @@
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
       <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
       <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
-      <a href="/what-is-ambigram.html" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+      <a href="/what-is-ambigram" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
 
       <!-- Mobile Tutorial Accordion/Dropdown -->
       <div class="border-b border-gray-200">
@@ -689,16 +689,16 @@
           </svg>
         </button>
         <div id="mobile-tutorial-links">
-          <a href="/tutorial/multi-word-guide.html" class="block px-8 py-2 text-dark hover:bg-gray-100">Multi-Word
+          <a href="/tutorial/multi-word-guide" class="block px-8 py-2 text-dark hover:bg-gray-100">Multi-Word
             Guide</a>
-          <a href="/tutorial/tattoo-design.html" class="block px-8 py-2 text-dark hover:bg-gray-100">Tattoo Design
+          <a href="/tutorial/tattoo-design" class="block px-8 py-2 text-dark hover:bg-gray-100">Tattoo Design
             Guide</a>
-          <a href="/tutorial/two-name-ambigram.html" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
+          <a href="/tutorial/two-name-ambigram" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
             Ambigram</a>
         </div>
       </div>
 
-      <a href="/tattoo-design.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
+      <a href="/tattoo-design" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
       <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
       <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
       <div class="p-4">
@@ -1198,7 +1198,6 @@
             </li>
             <li><a href="/3d-generator" class="text-gray-400 hover:text-white transition-colors text-sm">3D
                 Generator</a></li>
-            <li><a href="/pricing" class="text-gray-400 hover:text-white transition-colors text-sm">Pricing</a></li>
 
           </ul>
         </div>
@@ -1206,10 +1205,10 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-white">Guides </h4>
           <ul class="space-y-3">
-            <li><a href="/what-is-ambigram.html" class="text-gray-400 hover:text-white transition-colors text-sm">What
+            <li><a href="/what-is-ambigram" class="text-gray-400 hover:text-white transition-colors text-sm">What
                 is an Ambigram</a></li>
 
-            <li><a href="/tattoo-design.html" class="text-gray-400 hover:text-white transition-colors text-sm"> Design
+            <li><a href="/tattoo-design" class="text-gray-400 hover:text-white transition-colors text-sm"> Design
                 Guide</a></li>
 
           </ul>
@@ -1217,11 +1216,11 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-white">Tutorial </h4>
           <ul class="space-y-3">
-            <li><a href="/tutorial/multi-word-guide.html"
+            <li><a href="/tutorial/multi-word-guide"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Multi-Word Ambigram</a></li>
-            <li><a href="/tutorial/tattoo-design.html"
+            <li><a href="/tutorial/tattoo-design"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Tattoo Design Guide</a></li>
-            <li><a href="/tutorial/two-name-ambigram.html"
+            <li><a href="/tutorial/two-name-ambigram"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Two-Name Ambigram</a></li>
 
           </ul>
@@ -1235,7 +1234,7 @@
             </li>
             <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of Service</a>
             </li>
-            <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
+            <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
           </ul>
         </div>
       </div>
