--- a/3d-generator.html
+++ b/3d-generator.html
@@ -61,26 +61,52 @@
 </head>
 
 <body class="bg-light text-dark font-sans">
-
     <header class="bg-white shadow-md sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="/"
-                class="text-xl font-bold text-dark hover:text-primary transition-colors">AmbigramGenerator.me</a>
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center flex-wrap">
+            <a href="/" class="flex items-center text-xl font-bold text-dark hover:text-primary transition-colors">
+                <img src="/logo.png" alt="">
+            </a>
             <nav id="main-nav" class="hidden md:flex items-center space-x-6">
-                <a href="/generator.html" class="text-dark hover:text-primary font-medium transition-colors">2D
+                <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
+                <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D
                     Generator</a>
-                <a href="/3d-generator.html"
-                    class="text-primary border-b-2 border-primary font-medium transition-colors">3D Generator</a>
-                <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What
-                    is an Ambigram</a>
-                <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
-                <a href="/generator.html"
+                <a href="/what-is-ambigram" class="text-dark hover:text-primary font-medium transition-colors">What is
+                    an
+                    Ambigram</a>
+
+                <!-- Tutorial Dropdown - Adjusted href to prevent '#' error -->
+                <div class="relative group">
+                    <a href="javascript:void(0);"
+                        class="text-dark hover:text-primary font-medium transition-colors inline-flex items-center group-hover:text-primary">
+                        Tutorial
+                        <svg class="ml-1 w-4 h-4 transition-transform duration-200 group-hover:rotate-180" fill="none"
+                            stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                            </path>
+                        </svg>
+                    </a>
+                    <div class="absolute left-1/2 -translate-x-1/2 hidden group-hover:block bg-white shadow-lg rounded-md space-y-2 w-48 py-2 z-20 border border-gray-100 
+    -mt-1"> <!-- 调整margin-top为负值，使其与父菜单重叠 -->
+                        <a href="/tutorial/multi-word-guide"
+                            class="block px-4 py-2 text-dark hover:bg-gray-100">Multi-Word
+                            Guide</a>
+                        <a href="/tutorial/tattoo-design" class="block px-4 py-2 text-dark hover:bg-gray-100">Tattoo
+                            Design
+                            Guide</a>
+                        <a href="/tutorial/two-name-ambigram"
+                            class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
+                            Ambigram</a>
+                    </div>
+                </div>
+
+                <a href="/tattoo-design" class="font-medium transition-colors">Design Guides</a>
+                <!-- Check this href as well, if it's meant to be a scroll-to link -->
+                <a href="#generator"
                     class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start
                     Creating</a>
-                <a href="./privacy.html" class="text-dark hover:text-primary font-medium transition-colors">Privacy
-                    Policy</a>
-                <a href="./terms.html" class="text-dark hover:text-primary font-medium transition-colors">Terms of
-                    Service</a>
+                <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
+                <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
+                <a href="/about" class="text-dark hover:text-primary font-medium transition-colors">About Us</a>
             </nav>
             <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
                 <i class="fa fa-bars"></i>
@@ -89,19 +115,55 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
             <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
-            <a href="/3d-generator" class="block py-2 px-4 bg-primary/10 text-primary font-medium">3D Generator</a>
+            <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
             <a href="/what-is-ambigram" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+
+            <!-- Mobile Tutorial Accordion/Dropdown -->
+            <div class="border-b border-gray-200">
+                <button class="flex justify-between items-center w-full py-2 px-4 text-dark hover:bg-gray-100"
+                    onclick="toggleMobileTutorial()">
+                    Tutorial
+                    <svg class="ml-2 w-4 h-4 transform transition-transform duration-300" id="mobile-tutorial-arrow"
+                        fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                    </svg>
+                </button>
+                <div id="mobile-tutorial-links">
+                    <a href="/tutorial/multi-word-guide" class="block px-8 py-2 text-dark hover:bg-gray-100">Multi-Word
+                        Guide</a>
+                    <a href="/tutorial/tattoo-design" class="block px-8 py-2 text-dark hover:bg-gray-100">Tattoo Design
+                        Guide</a>
+                    <a href="/tutorial/two-name-ambigram" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
+                        Ambigram</a>
+                </div>
+            </div>
+
             <a href="/tattoo-design" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
-            <a href="./privacy.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
-            <a href="./terms.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+            <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
+            <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
-                <a href="/generator"
+                <a href="#generator"
                     class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start
                     Creating</a>
             </div>
         </div>
     </header>
 
+    <script>
+        // JavaScript for toggling mobile menu visibility (if not already present)
+        document.getElementById('mobile-menu-btn').addEventListener('click', function () {
+            const mobileMenu = document.getElementById('mobile-menu');
+            mobileMenu.classList.toggle('hidden');
+        });
+
+        // JavaScript for toggling the mobile tutorial dropdown
+        function toggleMobileTutorial() {
+            const tutorialLinks = document.getElementById('mobile-tutorial-links');
+            const arrow = document.getElementById('mobile-tutorial-arrow');
+            tutorialLinks.classList.toggle('hidden');
+            arrow.classList.toggle('rotate-180'); // Rotate arrow when open
+        }
+    </script>
     <main>
         <section class="bg-dark text-white py-24 md:py-32">
             <div class="container mx-auto px-4 relative z-10 text-center">
@@ -250,7 +312,8 @@
                             where a single object reads two different words when viewed from opposing angles. Our
                             <strong>3D ambigram generator</strong> uses a specialized algorithm that calculates the
                             optimal extrusion paths and shadow geometry necessary to maintain legibility in the physical
-                            world.</p>
+                            world.
+                        </p>
                         <p class="text-gray-700">The software takes your text input, maps the 2D rotational ambigram,
                             and then uses a <strong>cross-sectioning technique</strong> to generate the solid body. This
                             process creates a clean, watertight <strong>STL file</strong> that is perfectly optimized
@@ -368,7 +431,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4 text-white">Support</h4>
                     <ul class="space-y-3">
-                        <li><a href="/#faq" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a>
+                        <li><a href="/faq" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a></li>
                         </li>
                         <li><a href="/privacy" class="text-gray-400 hover:text-white transition-colors text-sm">Privacy
                                 Policy</a>
@@ -400,9 +463,6 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-            const mobileMenu = document.getElementById('mobile-menu');
-            if (mobileMenuBtn && mobileMenu) { mobileMenuBtn.addEventListener('click', () => { mobileMenu.classList.toggle('hidden'); }); }
 
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
