--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-white">Support</h4>
           <ul class="space-y-3">
-            <li><a href="/#faq" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a></li>
+            <li><a href="/faq" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a></li>
             <li><a href="/privacy" class="text-gray-400 hover:text-white transition-colors text-sm">Privacy Policy</a>
             </li>
             <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of Service</a>
